common-applications/freesky-icsl-hk-cluster/gitea-repo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: gitea-repo-icsl
  name: gitea-repo-icsl
