common-applications/freesky-icsl-hk-cluster/gitea-repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-repo
  namespace: gitea-repo-icsl
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: gitea-repo-icsl
  type: ClusterIP
